[gd_scene load_steps=2 format=3 uid="uid://package_ui_001"]

[ext_resource type="Script" path="res://scripts/ui/package_ui.gd" id="1_package_ui"]

[node name="PackageUI" type="CanvasLayer"]
script = ExtResource("1_package_ui")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Delivery Package"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator1" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ContentsContainer" type="VBoxContainer" parent="Panel/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="HSeparator2" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ButtonsHBox" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="TakeAllButton" type="Button" parent="Panel/VBoxContainer/ButtonsHBox"]
layout_mode = 2
text = "Take All Items"
custom_minimum_size = Vector2(200, 0)

[node name="CloseButton" type="Button" parent="Panel/VBoxContainer/ButtonsHBox"]
layout_mode = 2
text = "Close"
custom_minimum_size = Vector2(150, 0)
